Bug 167169 - RTF import: tables using \tblindN have incorrect width
Summary: RTF import: tables using \tblindN have incorrect width
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-23 04:50 UTC by Mike Kaganski
Modified: 2025-06-26 16:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Several RTF tables (2.40 KB, application/msword)
2025-06-23 04:50 UTC, Mike Kaganski
Details
Word 2016 reference rendering (84.95 KB, image/png)
2025-06-23 04:51 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-06-23 04:50:52 UTC
Created attachment 201423 [details]
Several RTF tables

The attachment has several tables, using different combinations and order of \tblindN, \trdleftN, and \cellxN, created for testing. The file is created for simplicity; and therefore, all tables have no border lines, and need "View Gridlines" (Word) / "View"->"Boundaries" (Writer) to see the tables.

This bug is about Table 5 - Table 8 in the document.

In MS Word 2016, these tables are all indented to the right identically by 1000 twips; and have decreasing width from 9000 twips down to 7500 twips, step -500 twips; their B1 widths are identical 1000 twips, and A1 widths are respectively decreasing. The tables' right edges are all on different levels.

In Writer, all of them are indented correctly; but they all have identical width of 8000 twip, with inconsistent widths of A1 and B1, with B1 widths increasing from Table 5 to Table 8 (it is only correct for Table 7). The tables' right edges are all on the same level.
Comment 1 Mike Kaganski 2025-06-23 04:51:19 UTC
Created attachment 201424 [details]
Word 2016 reference rendering
Comment 2 Mike Kaganski 2025-06-23 05:33:24 UTC
https://gerrit.libreoffice.org/c/core/+/186807
Comment 3 Commit Notification 2025-06-23 07:15:40 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d00181e8c1ead5020cc8fee47ee7af7fc5039552

tdf#167169: postpone \trleftN processing until \row

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-06-26 16:04:34 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/23e0ae1273bbba44c155e01315ab81121275cab8

tdf#167169: postpone \trleftN processing until \row

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.