sw/source/writerfilter/rtftok/rtfdispatchvalue.cxx
@@ -386,32 +386,6 @@ bool RTFDocumentImpl::dispatchFrameValue(RTFKeyword nKeyword, int nParam)
     return false;
 }
 
-static int GetCellWidth(int thisCellX, int prevCellX, RTFSprms& tableRowSprms)
-{
-    thisCellX -= prevCellX;
-    if (thisCellX == 0 && prevCellX > 0)
-    {
-        // If width of cell is 0, BUT there is a value for \cellxN use minimal
-        // possible width. But if \cellxN has no value leave 0 so autofit will
-        // try to resolve this.
-
-        // sw/source/filter/inc/wrtswtbl.hxx, minimal possible width of cells.
-        const int COL_DFLT_WIDTH = 41;
-        thisCellX = COL_DFLT_WIDTH;
-    }
-    // If there is a negative left margin, then the first cellx is relative to that.
-    if (prevCellX == 0)
-    {
-        if (RTFValue::Pointer_t pTblInd = tableRowSprms.find(NS_ooxml::LN_CT_TblPrBase_tblInd))
-        {
-            RTFValue::Pointer_t pWidth = pTblInd->getAttributes().find(NS_ooxml::LN_CT_TblWidth_w);
-            if (pWidth && pWidth->getInt() < 0)
-                thisCellX = -1 * (pWidth->getInt() - prevCellX);
-        }
-    }
-    return thisCellX;
-}
-
 bool RTFDocumentImpl::dispatchTableValue(RTFKeyword nKeyword, int nParam)
 {
     int nSprm = 0;
@@ -425,9 +399,9 @@ bool RTFDocumentImpl::dispatchTableValue(RTFKeyword nKeyword, int nParam)
                 (Destination::NESTEDTABLEPROPERTIES == m_aStates.top().getDestination())
                     ? m_nNestedCurrentCellX
                     : m_nTopLevelCurrentCellX);
-            int nCellX = GetCellWidth(nParam, rCurrentCellX, m_aStates.top().getTableRowSprms());
+            int nCellWidth = nParam - rCurrentCellX;
             rCurrentCellX = nParam;
-            auto pXValue = new RTFValue(nCellX);
+            auto pXValue = new RTFValue(nCellWidth);
             m_aStates.top().getTableRowSprms().set(NS_ooxml::LN_CT_TblGridBase_gridCol, pXValue,
                                                    RTFConflictPolicy::Append);
             if (Destination::NESTEDTABLEPROPERTIES == m_aStates.top().getDestination())
@@ -488,60 +462,18 @@ bool RTFDocumentImpl::dispatchTableValue(RTFKeyword nKeyword, int nParam)
         }
         break;
         case RTFKeyword::TRLEFT:
-        case RTFKeyword::TBLIND:
         {
-            // the value is in twips
             auto const aDestination = m_aStates.top().getDestination();
             int& rCurrentTRLeft((Destination::NESTEDTABLEPROPERTIES == aDestination)
                                     ? m_nNestedTRLeft
                                     : m_nTopLevelTRLeft);
-            int& rCurrentCellX((Destination::NESTEDTABLEPROPERTIES == aDestination)
-                                   ? m_nNestedCurrentCellX
-                                   : m_nTopLevelCurrentCellX);
-            putNestedAttribute(m_aStates.top().getTableRowSprms(), NS_ooxml::LN_CT_TblPrBase_tblInd,
-                               NS_ooxml::LN_CT_TblWidth_type,
-                               new RTFValue(NS_ooxml::LN_Value_ST_TblWidth_dxa));
-
-            if (nKeyword == RTFKeyword::TBLIND)
-            {
-                RTFValue::Pointer_t pCellMargin
-                    = m_aStates.top().getTableRowSprms().find(NS_ooxml::LN_CT_TblPrBase_tblCellMar);
-                if (pCellMargin)
-                {
-                    RTFValue::Pointer_t pMarginLeft
-                        = pCellMargin->getSprms().find(NS_ooxml::LN_CT_TcMar_left);
-                    if (pMarginLeft)
-                        nParam -= pMarginLeft->getAttributes()
-                                      .find(NS_ooxml::LN_CT_TblWidth_w)
-                                      ->getInt();
-                }
-            }
             rCurrentTRLeft = nParam;
-            // Correct the first cellX, if already pushed before these.
-            // FIXME: this whole convoluted processing of CELLX, TRLEFT, TBLIND should be replaced
-            // with simple pushing of the respective values as is; and all that should eventually
-            // be processed in RTFKeyword::ROW handler (RTFDocumentImpl::dispatchSymbol), where all
-            // information would already be available. There we could know the table indent, row
-            // left offset, all right cell boundaries; and could calculate correct widths (likely
-            // in prepareProperties call).
-            bool hadCellX = false;
-            for (auto & [ id, pValue ] : m_aStates.top().getTableRowSprms())
-            {
-                if (id == NS_ooxml::LN_CT_TblGridBase_gridCol)
-                {
-                    if (int val = pValue->getInt(); val != -1)
-                    {
-                        val = GetCellWidth(val, nParam, m_aStates.top().getTableRowSprms());
-                        pValue = new RTFValue(val);
-                        hadCellX = true;
-                        break;
-                    }
-                }
-            }
-            if (!hadCellX)
-                rCurrentCellX = rCurrentTRLeft;
-            putNestedAttribute(m_aStates.top().getTableRowSprms(), NS_ooxml::LN_CT_TblPrBase_tblInd,
-                               +NS_ooxml::LN_CT_TblWidth_w, new RTFValue(nParam));
+            return true;
+        }
+        break;
+        case RTFKeyword::TBLIND:
+        {
+            set_tblInd(m_aStates.top().getTableRowSprms(), nParam);
             return true;
         }
         break;
